--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,7 @@
+html {
+  overflow: auto !important;
+}
+
 /* ================== Input[type=number] ================== */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
